--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
+  "homepage": "https://pjpetro.github.io/UserDirectory/",
   "name": "reactpractice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pjpetro.github.io/UserDirectory/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "babel": "^6.23.0",
-    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
