--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://pjpetro.github.io/UserDirectory/",
-  "name": "reactpractice",
+  "name": "userdirectory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
